[package]
name = "pixels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
rand = "0.7.3"
env_logger = "0.9"
getrandom = "0.2"
line_drawing = "1.0"
log = "0.4"
pixels = "0.9.0"
randomize = "3.0"
winit = "0.26"
winit_input_helper = "0.11"
image = "0.24.1"
